--- a/oc.yaml
+++ b/oc.yaml
@@ -35,13 +35,26 @@ spec:
                 name: mi-configmap-clone
             - secretRef:
                 name: mi-secret-clone
-          volumeMounts:
-            - name: datos
-              mountPath: /app/data
-      volumes:
-        - name: datos
-          persistentVolumeClaim:
-            claimName: mi-pvc-dt-clone
+          startupProbe:
+            httpGet:
+              path: /startup
+              port: 8082
+            failureThreshold: 5
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /readiness
+              port: 8082
+            failureThreshold: 5
+            initialDelaySeconds: 0
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8082
+            failureThreshold: 5
+            initialDelaySeconds: 0
+            periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
